--- a/css/home.css
+++ b/css/home.css
@@ -3032,24 +3032,23 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #283c58;
+  border-color: #283c586a;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  background-color: rgb(67, 116, 168);;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+  background-color: rgb(67, 116, 168);
+  border-color: rgb(67, 116, 168);
   box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0a58ca;
-  border-color: #0a53be;
+  background-color: rgb(67, 116, 168);
+  border-color: rgb(67, 116, 168);
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(49, 132, 253, 0.5);
@@ -11336,12 +11335,17 @@ section {
         width: 33%;
         float: left;
     }
+
 }
 @media (min-width: 992px) {
     .col-md-1-3 {
         width: 33%;
         float: left;
     }
+    .col-md-2-2 {
+      width: 50%;
+      float: left;
+  }
 }
 @media (min-width: 1200px) {
     .col-lg-1-3 {
@@ -11351,3 +11355,98 @@ section {
 }
 
 
+
+// Learn about this solution to creating custom select styles:
+// @link https://moderncss.dev/custom-select-styles-with-pure-css/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+:root {
+  --select-border: #777;
+  --select-focus: blue;
+  --select-arrow: var(--select-border);
+}
+
+select {
+  // A reset of styles, including removing the default dropdown arrow
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  padding: 0 1em 0 0;
+  margin: 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: inherit;
+  line-height: inherit;
+  display: inline;
+
+  // Stack above custom arrow
+  z-index: 1;
+
+  // Remove dropdown arrow in IE10 & IE11
+  // @link https://www.filamentgroup.com/lab/select-css.html
+  &::-ms-expand {
+    display: none;
+  }
+
+  // Remove focus outline, will add on alternate element
+  outline: none;
+}
+
+/* Reset Select */
+select {
+  -webkit-appearance: none;
+   -moz-appearance: none;
+   -ms-appearance: none;
+   appearance: none;
+   outline: 0;
+   box-shadow: none;
+   border: 0 !important;
+   background: #606263;
+   background-image: none;
+   display: inline-flex;
+ }
+ /* Remove IE arrow */
+ select::-ms-expand {
+   display: none;
+ }
+ /* Custom Select */
+ .select {
+   position: relative;
+   display: flex;
+   width: 20em;
+   height: 3em;
+   line-height: 3;
+   background: #2c3e50;
+   overflow: hidden;
+   border-radius: .25em;
+ }
+ select {
+   flex: 1;
+   padding: 0 .5em;
+   color: #fff;
+   cursor: pointer;
+ }
+ /* Arrow */
+ .select::after {
+   content: '\25BC';
+   position: absolute;
+   top: 0;
+   right: 0;
+   padding: 0 1em;
+   background: #537594;
+   cursor: pointer;
+   pointer-events: none;
+   -webkit-transition: .25s all ease;
+   -o-transition: .25s all ease;
+   transition: .25s all ease;
+ }
+ /* Transition */
+ .select:hover::after {
+   color: #0c4128;
+ }
