--- a/css/home.css
+++ b/css/home.css
@@ -11335,6 +11335,10 @@ section {
         width: 33%;
         float: left;
     }
+.col-md-2-2 {
+  width: 50%;
+  float: left;
+}
 
 }
 @media (min-width: 992px) {
@@ -11345,13 +11349,17 @@ section {
     .col-md-2-2 {
       width: 50%;
       float: left;
-  }
+    }
 }
 @media (min-width: 1200px) {
     .col-lg-1-3 {
         width: 33%;
         float: left;
     }
+  .col-md-2-2 {
+    width: 50%;
+    float: left;
+  }
 }
 
 
