--- a/css/main.css
+++ b/css/main.css
@@ -99,3 +99,14 @@ body {
     background-color: rgb(234, 242, 248);
     z-index: 999;
 }
+.requiredWater-container {
+    position:absolute; 
+    padding: 10px;
+    width: auto; 
+    height: auto; 
+    bottom:50px; 
+    right:50px; 
+    background-color: rgb(234, 242, 248);
+    z-index: 999;
+}
+
