--- a/css/home.css
+++ b/css/home.css
@@ -91,6 +91,13 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+/**地圖物件**/
+#map{
+  width: 100%;
+  height: 88%;
+
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -11364,47 +11371,6 @@ section {
 
 
 
-// Learn about this solution to creating custom select styles:
-// @link https://moderncss.dev/custom-select-styles-with-pure-css/
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-:root {
-  --select-border: #777;
-  --select-focus: blue;
-  --select-arrow: var(--select-border);
-}
-
-select {
-  // A reset of styles, including removing the default dropdown arrow
-  appearance: none;
-  background-color: transparent;
-  border: none;
-  padding: 0 1em 0 0;
-  margin: 0;
-  width: 100%;
-  font-family: inherit;
-  font-size: inherit;
-  cursor: inherit;
-  line-height: inherit;
-  display: inline;
-
-  // Stack above custom arrow
-  z-index: 1;
-
-  // Remove dropdown arrow in IE10 & IE11
-  // @link https://www.filamentgroup.com/lab/select-css.html
-  &::-ms-expand {
-    display: none;
-  }
-
-  // Remove focus outline, will add on alternate element
-  outline: none;
-}
 
 /* Reset Select */
 select {
@@ -11427,10 +11393,10 @@ select {
  .select {
    position: relative;
    display: flex;
-   width: 20em;
+   width: 100%;
    height: 3em;
    line-height: 3;
-   background: #2c3e50;
+   background: #ffff;
    overflow: hidden;
    border-radius: .25em;
  }
@@ -11460,3 +11426,38 @@ select {
  }
 
 
+/*
+ * These CSS rules affect the tooltips within maps with the custom-popup
+ * class. See the full CSS for all customizable options:
+ * https://github.com/mapbox/mapbox.js/blob/001754177f3985c0e6b4a26e3c869b0c66162c99/theme/style.css#L321-L366
+*/
+.custom-popup .leaflet-popup-content-wrapper {
+  background:#2c3e50;
+  color:#fff;
+  font-size:16px;
+  line-height:24px;
+  }
+.custom-popup .leaflet-popup-content-wrapper a {
+  color:rgba(255,255,255,0.5);
+  }
+.custom-popup .leaflet-popup-tip-container {
+  width:30px;
+  height:15px;
+  }
+.custom-popup .leaflet-popup-tip {
+  border-left:15px solid transparent;
+  border-right:15px solid transparent;
+  border-top:15px solid #2c3e50;
+  }
+
+.policy-image-area {
+  background-color: rgb(230, 230, 230);
+  border-radius: 8px;
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+}
+.policy-image {
+  padding-top: 20%;
+  vertical-align: middle;
+}
